aligned "Go to Course" buttons fixed #129

--- a/style.css
+++ b/style.css
@@ -977,3 +977,22 @@ footer {
 .social-icons li {
   display: inline-block;
 }
+
+/* code to align Go to Course buttons */
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-body .btn {
+  align-self: center;
+  margin-top: auto;
+}
